[package]
name = "messloc"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Port of Mesh Allocator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
rust-version = "1.64.0"

[dependencies]
arrayvec = "0.7"
libc = "0.2.126"
lazy_static = "1"
rand_xoshiro = "0.6"
stacker = "0.1"
memmap2 = "0.5.7"

[features]
allocator-api = []
